Gallery is almost working.
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@106 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+TODO: Re-write this so it's current!!!
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create 
